--- a/sql-parser-app/build.gradle
+++ b/sql-parser-app/build.gradle
@@ -1,7 +1,16 @@
+
 plugins {
     id 'java'
     id 'application'
 }
+
+repositories {
+    maven {
+        url "http://jars.interlis.ch"
+    }
+    mavenCentral()
+}
+
 
 mainClassName = 'ch.so.agi.gretl.jobs.cleaner.App'
 
@@ -10,7 +19,8 @@ dependencies {
     compile group: 'com.github.jsqlparser', name: 'jsqlparser', version: '1.2'
     compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.0.2.201807311906-r'
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
-
+    compile group: 'ch.ehi', name: 'ehisqlgen', version: '1.13.3'
+    
     compile 'com.google.guava:guava:23.0'
     testCompile 'junit:junit:4.12'
 }
